--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -12,6 +12,18 @@
       <th>More Info</th>
     </tr>
   </thead>
+
+  <%= form_tag movies_path, method: :get, id: 'ratings_form' do %>
+    Include:
+    <% @all_ratings.each do |rating| %>
+      <div class="form-check  form-check-inline">
+        <%= label_tag "ratings[#{rating}]", rating, class: 'form-check-label' %>
+        <%= check_box_tag "ratings[#{rating}]", "1",  @ratings_to_show_hash.include?(rating), class: 'form-check-input' %>
+      </div>
+    <% end %>
+    <%= submit_tag 'Refresh', id: 'ratings_submit', class: 'btn btn-primary' %>
+  <% end %>
+
   <tbody>
     <% @movies.each do |movie| %>
       <tr>
