--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,9 +6,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th class="<%= @title_header_class %>"><%= link_to "Movie Title", movies_path(sort: 'title'), id: "title_header" %></th>
+      <th class="<%= @title_header_class %>"><%= link_to "Movie Title", movies_path(sort: 'title', ratings: @ratings_to_show_hash.map { |rating| [rating, '1'] }.to_h), id: "title_header" %></th>
       <th>Rating</th>
-      <th class="<%= @release_date_header_class %>"><%= link_to "Release Date", movies_path(sort: 'release_date'), id: "release_date_header" %></th>
+      <th class="<%= @release_date_header_class %>"><%= link_to "Release Date", movies_path(sort: 'release_date', ratings: @ratings_to_show_hash.map { |rating| [rating, '1'] }.to_h), id: "release_date_header" %></th>
       <th>More Info</th>
     </tr>
   </thead>
